# XT-neighbor

./: .gitignore  LICENSE  airr_8cu.html  annotated.html  classBlob-members.html  classBlob.html  classChunk-members.html  classChunk.html  classD2Stream-members.html  classD2Stream.html  classGPUInputStream-members.html  classGPUInputStream.html  classRAMSwapStream-members.html  classRAMSwapStream.html  classSeqArray-members.html  classSeqArray.html  classes.html  cli_8cu.html  cli_8cu__incl.dot  cli_8cu__incl.md5  codec_8cu.html  codec_8cu__dep__incl.dot  codec_8cu__dep__incl.md5  codec_8cu__incl.dot  codec_8cu__incl.md5  cub_8cu.html  cub_8cu__dep__incl.dot  cub_8cu__dep__incl.md5  cub_8cu__incl.dot  cub_8cu__incl.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  generate__combination_8cu.html  generate__combination_8cu__dep__incl.dot  generate__combination_8cu__dep__incl.md5  generate__combination_8cu__incl.dot  generate__combination_8cu__incl.md5  (+64 more)
1.0/: CMakeLists.txt  readme.md
1.0/src/: brute_force.cu  cli.cu  codec.cu  cub.cu  generate_combination.cu  kernel.cu  symspell.cu  symspell.h  symspell_inner.cu  util.cu  xtn.h
1.0/test/: test_brute_force.cu  test_codec.cu
1.0/test/sample/: input2.txt  input3.txt
2.0/: CMakeLists.txt  Doxyfile  make_doc.sh  readme.md
2.0/src/: airr.cu  brute_force.cu  cli.cu  codec.cu  cub.cu  generate_combination.cu  kernel.cu  stream.cu  util.cu  xtn.cu  xtn.h  xtn_inner.cu  xtn_overlap_inner.cu
2.0/test/: test_airr.cu  test_bin_packing.cu  test_binary_search.cu  test_brute_force.cu  test_codec.cu  test_generate_combination.cu  test_memory.cu  test_overlap2.cu  test_overlap_init.cu  test_stream.cu  test_stream1.cu  test_stream2.cu  test_stream3.cu  test_stream4.cu  test_stream4_overlap.cu  test_util.cu
2.0/test/sample/: input1.txt
data/: alg_benchmark.csv  alg_benchmark.ipynb  compairr_benchmark.csv  count_18.py  cpu_benchmark.csv  cpu_dist_benchmark.csv  dummy_input.txt  dummy_input2.csv  dummy_input_airr.tsv  emerson_rep_long.txt  gpu_benchmark.csv  gpu_dist_benchmark.csv  hello.cu  info.csv  info_long.csv  preprocess.py  preprocess2.py  preprocess3.py  preprocess4.py  sota_benchmark.csv
pub/: compairr_benchmark.ipynb  scaling_plots.ipynb  tcrdist.ipynb
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_2.js  files_3.js  files_4.js  files_5.js  (+39 more)
